[package]
name = "pci_types"
version = "0.4.0"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/pci_types"
description = "Library with types for handling PCI devices"
categories = ["hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bit_field = "0.10"
